--- a/data/tasks.json
+++ b/data/tasks.json
@@ -2,9 +2,9 @@
   "1": {
     "ID": 1,
     "Name": "hello json world A",
-    "Priority": 2,
-    "Project": "",
-    "Status": 0,
+    "Priority": 1,
+    "Project": "halu",
+    "Status": 2,
     "Created": "2025-05-08T14:43:20.346786+08:00"
   }
 }
